Add a recipes directory and eggnog recipe page
This commit creates adds a recipes directory to the main odin-recipes
directory as well as an eggnog recipe html file with that directory.
Also, a link to this page was added to index.html

--- a/recipes/eggnog.html
+++ b/recipes/eggnog.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Eggnog</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/eggnog.html">Amazingly Good Eggnog</a>
+    <!--https://www.allrecipes.com/recipe/57028/amazingly-good-eggnog/-->
+    <h1>Amazingly Good Eggnog</h1>
 </body>
 </html>
