--- a/recipes/eggnog.html
+++ b/recipes/eggnog.html
@@ -9,5 +9,28 @@
 <body>
     <!--https://www.allrecipes.com/recipe/57028/amazingly-good-eggnog/-->
     <h1>Amazingly Good Eggnog</h1>
+    <img src="https://www.allrecipes.com/thmb/Sf0qGHcgUu7I_VxLgJazPeZp29k=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/57028-amazingly-good-eggnog-mfs304-ac946b3e89aa416f8bdd3171fdd69cab.jpg" alt="Two glasses of eggnog sitting on a table"/>
+    <h2>Description</h2>
+    <p>Eggnog is a thick, creamy, and dairy- and egg-based drink. It's traditionally made in large batches and served at holiday gatherings. It's often spiked with bourbon or rum, but it is also frequently served without alcohol.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>4 cups milk</li>
+        <li>1 teaspoon ground cinnamon</li>
+        <li>5 whole cloves</li>
+        <li>2 1/2 teaspoons vanilla extract, divided</li>
+        <li>12 large egg yolks</li>
+        <li>1 1/2 cups white sugar</li>
+        <li>4 cups light cream</li>
+        <li>2 1/2 cups light rum (Optional)</li>
+        <li>1/2 teaspoon ground nutmeg</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Combine milk, cinnamon, 1/2 teaspoon vanilla, and cloves in a saucepan over the lowest heat setting; stir and heat for 5 minutes. Increase heat to medium-low and slowly bring to a boil. Remove from the heat.</li>
+        <li>Whisk egg yolks in a large bowl until light yellow in color. Add sugar and whisk until light and fluffy.</li>
+        <li>Pour some of the hot milk mixture into the egg yolk mixture, whisking quickly to avoid scrambling the eggs. Continue adding hot milk and whisking to combine until all milk is incorporated.</li>
+        <li>Pour the mixture back into the saucepan. Cook over medium heat, stirring constantly, until thick, about 3 minutes; do not allow the mixture to boil. Strain to remove cloves and let cool for about 1 hour.</li>
+        <li>Stir in cream, rum, remaining 2 teaspoons vanilla, and nutmeg. Refrigerate before serving, 8 hours to overnight.</li>
+    </ol>
 </body>
 </html>
