Add artichoke recipe
This commit adds an artichoke recipe with description, ingredients, and
steps. Also a artichoke recipe was added to the index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/eggnog.html">Amazingly Good Eggnog</a>
+    <a href="recipes/artichoke.html">Hot Spinach Artichoke Dip</a>
 </body>
 </html>
