Add latkes recipe
This commit will add a latkes recipes to the /recipes directory. This
recipes includes description, ingredients, steps. A link to this recipe
will be added to the index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/eggnog.html">Amazingly Good Eggnog</a>
     <a href="recipes/artichoke.html">Hot Spinach Artichoke Dip</a>
+    <a href="recipes/latkes.html">Mom's Potato Latkes</a>
 </body>
 </html>
